Fix alignment of nav items

--- a/ckanext/glasgow_theme/theme/fanstatic/less/topbar.less
+++ b/ckanext/glasgow_theme/theme/fanstatic/less/topbar.less
@@ -1,4 +1,4 @@
-@topbar-height: 80px;  
+@topbar-height: 80px;
 
 .fixed, .masthead{
 	position:fixed;
@@ -17,7 +17,7 @@
 
 .masthead .section{
 	overflow:auto;
-	
+
 
   	a{
   		font-weight:700;
@@ -39,10 +39,10 @@
 
 	li{
 		float:left;
-		padding-top:1.5em;
-		
+		padding-top:2em;
+
 	}
-	
+
 }
 
 .actions{
